# mascate

./: .gitignore  .tool-versions  AGENTS.md  GEMINI.md  LICENSE  README.md  config.toml.example  pyproject.toml
.dev_docs/: .AGENTS.md.kate-swp  analise_critica-resp.md  cl.md
.dev_docs/docs/: anexo-gestao-modelos.md  anexo-spec-performance.md  arquitetura_memoria_rag.md  caderno-claudio.md  caderno-gem.md  caderno-nlm.md  doc_00-arquitetura-design.md  doc_01-spec-tratamento-dataset.md  estrategia_comandos_agnosticos.md  estrategia_gbnf.md  estrategia_infraestrutura_backend.md  estrategia_produto_seguranca.md  fluxo-completo-pipeline.md  identidade_visual_tui.md  plano-de-trabalho.md  system_apps.md  ubuntu_basics.md
docs/: 02-pipeline-flow.md  03a-checklist.md  04-model-management.md  05-rag-memory.md  08-commands-strategy.md  10-ui-identity.md  11-tts-dataset.md  architecture.md  configuration.md  development.md  getting-started.md  troubleshooting.md  user-guide.md
docs/references/: system-apps.md  ubuntu-basics.md
docs/technical/: 00-architecture-overview.md  01-models-spec.md  03-implementation-plan.md  03a-checklist.md  06-gbnf-strategy.md  07-security.md  09-infrastructure.md  battlefield-plan.md  manual-testing.md
scripts/: download_models.py  install_deps.py  setup.py
src/mascate/: __init__.py
src/mascate/audio/: __init__.py  capture.py  hotkey.py  pipeline.py
src/mascate/audio/stt/: __init__.py  whisper.py
src/mascate/audio/tts/: __init__.py  piper.py  templates.py
src/mascate/audio/vad/: __init__.py  processor.py
src/mascate/audio/wake/: __init__.py  detector.py
src/mascate/core/: __init__.py  config.py  exceptions.py  logging.py  orchestrator.py
src/mascate/executor/: __init__.py  executor.py  models.py  parser.py  registry.py  security.py
src/mascate/executor/handlers/: __init__.py  app.py  base.py  browser.py  file.py  media.py  system.py
src/mascate/intelligence/: __init__.py  brain.py
src/mascate/intelligence/llm/: __init__.py  grammar.py  granite.py  prompts.py
src/mascate/intelligence/llm/grammars/: base.gbnf  command.gbnf
src/mascate/intelligence/rag/: __init__.py  embeddings.py  knowledge.py  parser.py  retriever.py  vectordb.py
src/mascate/interface/: __init__.py  cli.py  hud.py
tests/: __init__.py
tests/e2e/: test_performance.py  test_stability.py
tests/integration/: test_audio_pipeline.py  test_brain.py  test_executor.py  test_orchestrator.py
tests/unit/: __init__.py
tests/unit/audio/: test_capture.py  test_hotkey.py  test_stt.py  test_tts.py  test_vad.py  test_wake.py
tests/unit/core/: __init__.py  test_config.py
tests/unit/executor/: test_handlers.py  test_parser.py  test_security.py
tests/unit/intelligence/: test_grammar.py  test_llm.py  test_rag.py  test_retriever.py
tests/unit/interface/: test_hud.py
